# restin-ai-04-02-26

./: .cursorrules  .dockerignore  .gitignore  .worklock  AGENTS.md  DEVICE_MESH_ARCHITECTURE.md  Dockerfile  GEMINI.md  GUIDE_SYSTEM_ARCHITECTURE.md  GuideService.test.ts  IMPLEMENTATION_ROADMAP.md  PATCH_A_SUMMARY.md  PHASE_1_COMPLETE.md  README.md  Restin AI 04 02 26.code-workspace  analyze_eslint.py  analyze_precommit.py  audit_report.md  channel.md  check_migration_logs.py  check_new_rules.py  check_routes.py  critical_backend_test.py  design_guidelines.json  docker-compose.yml  extract_pos_styles.py  find_any.py  fix_16.py  fix_16_errors.py  fix_17.py  fix_17_line.py  fix_17a.py  fix_any_types.py  fix_anys.py  fix_console_logs.py  fix_hr_pull.py  fix_imports.js  fix_nocheck.py  fix_nocheck_strict.py  fix_pos_unknown.py  (+39 more)
backend/: .env.example  Dockerfile  _check_data.py  _check_venues.py  _cleanup_secrets.py  _debug_integrations.py  _fix_venue_ids.py  _integrity_check.py  _server_legacy.py  _test_endpoints.py  analyze_gaps.py  audit_data_links.py  backfill_pins.py  bootstrap_organization.py  check_db.py  check_db_schema.py  check_emails.py  check_pin_users.py  check_pins.py  check_pos_orders.py  check_recipe_overlap.py  check_users.py  check_venues.py  create_indexes.py  debug_counts.py  debug_db_counts.py  debug_mongo.py  debug_pin.py  debug_pins.py  debug_recipes.py  debug_sell_prices.py  debug_simulate.py  enable_all_features.py  fix_all_gaps.py  fix_data_relationships.py  fix_express.py  fix_openai_phantom.py  fix_remaining.py  hr_routes.py  hyperscale_test.py  (+59 more)
(+2444 files in other folders)
