[project]
name = "restin-ai-backend"
version = "1.0.0"
description = "Restin.AI — Enterprise Hospitality OS Backend"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "smoke: marks tests as smoke tests for quick validation",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["routes", "services", "core"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
fail_under = 20
